<resources>
    <string name="app_name">Ask Me Anything</string>
    <string name="menu_about">About</string>
    <string name="menu_clear_history">Clear History</string>
    <string name="speech_not_supported">Voice recognition is not available at the moment.</string>
    <string name="dismiss">DISMISS</string>
    <string name="okay">OKAY</string>
    <string name="speech_prompt">Say something ...</string>
    <string name="enter_search_query">Enter search query or Tap on mic for voice input.</string>
    <string name="error_unable_to_search">Unable to retrieve data.\nPlease try again later.</string>
    <string name="wait_message">One moment please ...</string>
    <string name="response_title">Response Title</string>
    <string name="response_description">Response Description</string>
    <string name="about_dev">App Version : v2.0 (beta)\n\nDesigned and Developed by Sumit\n\nLanguage processing by WolframAlpha API\nImage recognition by Microsoft Cognitive API\nImage search by Google Search API</string>
    <string name="search_hint">Enter query ...</string>
    <string name="menu_search">Search</string>
    <string name="menu_clear_result">Clear Result</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_description">To get information on anything enter your search query in the search bar. You can also use voice input to enter query.\n\nTap on menu for more options on image based search.</string>
    <string name="error_network_not_available">Please check your network connectivity and try again.</string>
    <string name="menu_recognize_photo">Recognize Photo</string>
    <string name="menu_run_ocr">OCR</string>
    <string name="about_dialog_title">About App</string>
    <string name="menu_detect_emotion">Detect Emotion</string>
</resources>
