<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.sumit.askmeanything.MainActivity">

    <item
        android:id="@+id/action_recognize_photo"
        android:orderInCategory="100"
        android:title="@string/menu_recognize_photo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_run_ocr"
        android:orderInCategory="100"
        android:title="@string/menu_run_ocr"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_detect_emotion"
        android:orderInCategory="100"
        android:title="@string/menu_detect_emotion"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_history"
        android:orderInCategory="100"
        android:title="@string/menu_clear_history"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_result"
        android:orderInCategory="100"
        android:title="@string/menu_clear_result"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/menu_about"
        app:showAsAction="never" />

</menu>
